[package]
name = "bevy-gizmo-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14 " }

[features]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
